; ModuleID = '/home/carl/AnghaBench/zfs/lib/libefi/extr_rdwr_efi.c_efi_use_whole_disk.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libefi/extr_rdwr_efi.c_efi_use_whole_disk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dk_gpt = type { i32, i32, i32, i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i64, i64 }

@B_FALSE = common dso_local global i64 0, align 8
@EFI_MIN_RESV_SIZE = common dso_local global i32 0, align 4
@PARTITION_END_ALIGNMENT = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i64 0, align 8
@efi_debug = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"efi_use_whole_disk: sync needed\0A\00", align 1
@.str.1 = private unnamed_addr constant [47 x i8] c"efi_use_whole_disk: requested space not found\0A\00", align 1
@VT_ENOSPC = common dso_local global i32 0, align 4
@V_RESERVED = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [45 x i8] c"efi_use_whole_disk: wholedisk not available\0A\00", align 1
@.str.3 = private unnamed_addr constant [79 x i8] c"efi_use_whole_disk: data_start (%lli) + data_size (%lli) != resv_start (%lli)\0A\00", align 1
@VT_EINVAL = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [54 x i8] c"efi_use_whole_disk: limit (%lli) < resv_start (%lli)\0A\00", align 1
@.str.5 = private unnamed_addr constant [40 x i8] c"efi_use_whole_disk: difference is %lli\0A\00", align 1
@.str.6 = private unnamed_addr constant [49 x i8] c"efi_use_whole_disk:fail to write label, rval=%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @efi_use_whole_disk(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.dk_gpt*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.dk_gpt* null, %struct.dk_gpt** %4, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  store i64 0, i64* %9, align 8
  store i64 0, i64* %10, align 8
  %16 = load i64, i64* @B_FALSE, align 8
  store i64 %16, i64* %14, align 8
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @efi_alloc_and_read(i32 %17, %struct.dk_gpt** %4)
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %1
  %22 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %23 = icmp ne %struct.dk_gpt* %22, null
  br i1 %23, label %24, label %27

24:                                               ; preds = %21
  %25 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %26 = call i32 @efi_free(%struct.dk_gpt* %25)
  br label %27

27:                                               ; preds = %24, %21
  %28 = load i32, i32* %5, align 4
  store i32 %28, i32* %2, align 4
  br label %283

29:                                               ; preds = %1
  store i32 0, i32* %6, align 4
  br label %30

30:                                               ; preds = %58, %29
  %31 = load i32, i32* %6, align 4
  %32 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %33 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = icmp slt i32 %31, %34
  br i1 %35, label %36, label %61

36:                                               ; preds = %30
  %37 = load i64, i64* %9, align 8
  %38 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %39 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %38, i32 0, i32 5
  %40 = load %struct.TYPE_2__*, %struct.TYPE_2__** %39, align 8
  %41 = load i32, i32* %6, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i64 %42
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = icmp slt i64 %37, %45
  br i1 %46, label %47, label %57

47:                                               ; preds = %36
  %48 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %49 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %48, i32 0, i32 5
  %50 = load %struct.TYPE_2__*, %struct.TYPE_2__** %49, align 8
  %51 = load i32, i32* %6, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %50, i64 %52
  %54 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  store i64 %55, i64* %9, align 8
  %56 = load i32, i32* %6, align 4
  store i32 %56, i32* %7, align 4
  br label %57

57:                                               ; preds = %47, %36
  br label %58

58:                                               ; preds = %57
  %59 = load i32, i32* %6, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %6, align 4
  br label %30

61:                                               ; preds = %30
  store i32 0, i32* %6, align 4
  br label %62

62:                                               ; preds = %88, %61
  %63 = load i32, i32* %6, align 4
  %64 = load i32, i32* %7, align 4
  %65 = icmp slt i32 %63, %64
  br i1 %65, label %66, label %91

66:                                               ; preds = %62
  %67 = load i64, i64* %10, align 8
  %68 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %69 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %68, i32 0, i32 5
  %70 = load %struct.TYPE_2__*, %struct.TYPE_2__** %69, align 8
  %71 = load i32, i32* %6, align 4
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %70, i64 %72
  %74 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %73, i32 0, i32 0
  %75 = load i64, i64* %74, align 8
  %76 = icmp slt i64 %67, %75
  br i1 %76, label %77, label %87

77:                                               ; preds = %66
  %78 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %79 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %78, i32 0, i32 5
  %80 = load %struct.TYPE_2__*, %struct.TYPE_2__** %79, align 8
  %81 = load i32, i32* %6, align 4
  %82 = sext i32 %81 to i64
  %83 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %80, i64 %82
  %84 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %83, i32 0, i32 0
  %85 = load i64, i64* %84, align 8
  store i64 %85, i64* %10, align 8
  %86 = load i32, i32* %6, align 4
  store i32 %86, i32* %8, align 4
  br label %87

87:                                               ; preds = %77, %66
  br label %88

88:                                               ; preds = %87
  %89 = load i32, i32* %6, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* %6, align 4
  br label %62

91:                                               ; preds = %62
  %92 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %93 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %92, i32 0, i32 5
  %94 = load %struct.TYPE_2__*, %struct.TYPE_2__** %93, align 8
  %95 = load i32, i32* %8, align 4
  %96 = sext i32 %95 to i64
  %97 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %94, i64 %96
  %98 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %97, i32 0, i32 1
  %99 = load i64, i64* %98, align 8
  store i64 %99, i64* %11, align 8
  %100 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %101 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %100, i32 0, i32 1
  %102 = load i32, i32* %101, align 4
  %103 = sub nsw i32 %102, 1
  store i32 %103, i32* %15, align 4
  %104 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %105 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %104, i32 0, i32 2
  %106 = load i32, i32* %105, align 8
  %107 = load i32, i32* %15, align 4
  %108 = sub nsw i32 %106, %107
  %109 = load i32, i32* @EFI_MIN_RESV_SIZE, align 4
  %110 = sub nsw i32 %108, %109
  %111 = load i32, i32* @PARTITION_END_ALIGNMENT, align 4
  %112 = call i64 @P2ALIGN(i32 %110, i32 %111)
  store i64 %112, i64* %12, align 8
  %113 = load i64, i64* %10, align 8
  %114 = load i64, i64* %11, align 8
  %115 = add nsw i64 %113, %114
  %116 = load i64, i64* %12, align 8
  %117 = icmp ne i64 %115, %116
  br i1 %117, label %122, label %118

118:                                              ; preds = %91
  %119 = load i64, i64* %9, align 8
  %120 = load i64, i64* %12, align 8
  %121 = icmp ne i64 %119, %120
  br i1 %121, label %122, label %124

122:                                              ; preds = %118, %91
  %123 = load i64, i64* @B_TRUE, align 8
  store i64 %123, i64* %14, align 8
  br label %124

124:                                              ; preds = %122, %118
  %125 = load i64, i64* @efi_debug, align 8
  %126 = icmp ne i64 %125, 0
  br i1 %126, label %127, label %133

127:                                              ; preds = %124
  %128 = load i64, i64* %14, align 8
  %129 = icmp ne i64 %128, 0
  br i1 %129, label %130, label %133

130:                                              ; preds = %127
  %131 = load i32, i32* @stderr, align 4
  %132 = call i32 (i32, i8*, ...) @fprintf(i32 %131, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  br label %133

133:                                              ; preds = %130, %127, %124
  %134 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %135 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %134, i32 0, i32 3
  %136 = load i32, i32* %135, align 4
  %137 = icmp eq i32 %136, 1
  br i1 %137, label %149, label %138

138:                                              ; preds = %133
  %139 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %140 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %139, i32 0, i32 3
  %141 = load i32, i32* %140, align 4
  %142 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %143 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %142, i32 0, i32 2
  %144 = load i32, i32* %143, align 8
  %145 = icmp sge i32 %141, %144
  br i1 %145, label %146, label %159

146:                                              ; preds = %138
  %147 = load i64, i64* %14, align 8
  %148 = icmp ne i64 %147, 0
  br i1 %148, label %159, label %149

149:                                              ; preds = %146, %133
  %150 = load i64, i64* @efi_debug, align 8
  %151 = icmp ne i64 %150, 0
  br i1 %151, label %152, label %155

152:                                              ; preds = %149
  %153 = load i32, i32* @stderr, align 4
  %154 = call i32 (i32, i8*, ...) @fprintf(i32 %153, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.1, i64 0, i64 0))
  br label %155

155:                                              ; preds = %152, %149
  %156 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %157 = call i32 @efi_free(%struct.dk_gpt* %156)
  %158 = load i32, i32* @VT_ENOSPC, align 4
  store i32 %158, i32* %2, align 4
  br label %283

159:                                              ; preds = %146, %138
  %160 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %161 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %160, i32 0, i32 5
  %162 = load %struct.TYPE_2__*, %struct.TYPE_2__** %161, align 8
  %163 = load i32, i32* %7, align 4
  %164 = sext i32 %163 to i64
  %165 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %162, i64 %164
  %166 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %165, i32 0, i32 1
  %167 = load i64, i64* %166, align 8
  %168 = load i32, i32* @EFI_MIN_RESV_SIZE, align 4
  %169 = sext i32 %168 to i64
  %170 = icmp ne i64 %167, %169
  br i1 %170, label %185, label %171

171:                                              ; preds = %159
  %172 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %173 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %172, i32 0, i32 5
  %174 = load %struct.TYPE_2__*, %struct.TYPE_2__** %173, align 8
  %175 = load i32, i32* %7, align 4
  %176 = sext i32 %175 to i64
  %177 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %174, i64 %176
  %178 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %177, i32 0, i32 2
  %179 = load i64, i64* %178, align 8
  %180 = load i64, i64* @V_RESERVED, align 8
  %181 = icmp ne i64 %179, %180
  br i1 %181, label %185, label %182

182:                                              ; preds = %171
  %183 = load i32, i32* %7, align 4
  %184 = icmp ne i32 %183, 8
  br i1 %184, label %185, label %195

185:                                              ; preds = %182, %171, %159
  %186 = load i64, i64* @efi_debug, align 8
  %187 = icmp ne i64 %186, 0
  br i1 %187, label %188, label %191

188:                                              ; preds = %185
  %189 = load i32, i32* @stderr, align 4
  %190 = call i32 (i32, i8*, ...) @fprintf(i32 %189, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.2, i64 0, i64 0))
  br label %191

191:                                              ; preds = %188, %185
  %192 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %193 = call i32 @efi_free(%struct.dk_gpt* %192)
  %194 = load i32, i32* @VT_ENOSPC, align 4
  store i32 %194, i32* %2, align 4
  br label %283

195:                                              ; preds = %182
  %196 = load i64, i64* %10, align 8
  %197 = load i64, i64* %11, align 8
  %198 = add nsw i64 %196, %197
  %199 = load i64, i64* %9, align 8
  %200 = icmp ne i64 %198, %199
  br i1 %200, label %201, label %212

201:                                              ; preds = %195
  %202 = load i64, i64* @efi_debug, align 8
  %203 = icmp ne i64 %202, 0
  br i1 %203, label %204, label %210

204:                                              ; preds = %201
  %205 = load i32, i32* @stderr, align 4
  %206 = load i64, i64* %10, align 8
  %207 = load i64, i64* %11, align 8
  %208 = load i64, i64* %9, align 8
  %209 = call i32 (i32, i8*, ...) @fprintf(i32 %205, i8* getelementptr inbounds ([79 x i8], [79 x i8]* @.str.3, i64 0, i64 0), i64 %206, i64 %207, i64 %208)
  br label %210

210:                                              ; preds = %204, %201
  %211 = load i32, i32* @VT_EINVAL, align 4
  store i32 %211, i32* %2, align 4
  br label %283

212:                                              ; preds = %195
  %213 = load i64, i64* %12, align 8
  %214 = load i64, i64* %9, align 8
  %215 = icmp slt i64 %213, %214
  br i1 %215, label %216, label %226

216:                                              ; preds = %212
  %217 = load i64, i64* @efi_debug, align 8
  %218 = icmp ne i64 %217, 0
  br i1 %218, label %219, label %224

219:                                              ; preds = %216
  %220 = load i32, i32* @stderr, align 4
  %221 = load i64, i64* %12, align 8
  %222 = load i64, i64* %9, align 8
  %223 = call i32 (i32, i8*, ...) @fprintf(i32 %220, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.4, i64 0, i64 0), i64 %221, i64 %222)
  br label %224

224:                                              ; preds = %219, %216
  %225 = load i32, i32* @VT_EINVAL, align 4
  store i32 %225, i32* %2, align 4
  br label %283

226:                                              ; preds = %212
  %227 = load i64, i64* %12, align 8
  %228 = load i64, i64* %9, align 8
  %229 = sub nsw i64 %227, %228
  store i64 %229, i64* %13, align 8
  %230 = load i64, i64* @efi_debug, align 8
  %231 = icmp ne i64 %230, 0
  br i1 %231, label %232, label %236

232:                                              ; preds = %226
  %233 = load i32, i32* @stderr, align 4
  %234 = load i64, i64* %13, align 8
  %235 = call i32 (i32, i8*, ...) @fprintf(i32 %233, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.5, i64 0, i64 0), i64 %234)
  br label %236

236:                                              ; preds = %232, %226
  %237 = load i64, i64* %13, align 8
  %238 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %239 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %238, i32 0, i32 5
  %240 = load %struct.TYPE_2__*, %struct.TYPE_2__** %239, align 8
  %241 = load i32, i32* %8, align 4
  %242 = sext i32 %241 to i64
  %243 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %240, i64 %242
  %244 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %243, i32 0, i32 1
  %245 = load i64, i64* %244, align 8
  %246 = add nsw i64 %245, %237
  store i64 %246, i64* %244, align 8
  %247 = load i64, i64* %13, align 8
  %248 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %249 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %248, i32 0, i32 5
  %250 = load %struct.TYPE_2__*, %struct.TYPE_2__** %249, align 8
  %251 = load i32, i32* %7, align 4
  %252 = sext i32 %251 to i64
  %253 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %250, i64 %252
  %254 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %253, i32 0, i32 0
  %255 = load i64, i64* %254, align 8
  %256 = add nsw i64 %255, %247
  store i64 %256, i64* %254, align 8
  %257 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %258 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %257, i32 0, i32 2
  %259 = load i32, i32* %258, align 8
  %260 = load i32, i32* %15, align 4
  %261 = sub nsw i32 %259, %260
  %262 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %263 = getelementptr inbounds %struct.dk_gpt, %struct.dk_gpt* %262, i32 0, i32 4
  store i32 %261, i32* %263, align 8
  %264 = load i32, i32* %3, align 4
  %265 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %266 = call i32 @efi_write(i32 %264, %struct.dk_gpt* %265)
  store i32 %266, i32* %5, align 4
  %267 = load i32, i32* %5, align 4
  %268 = icmp slt i32 %267, 0
  br i1 %268, label %269, label %280

269:                                              ; preds = %236
  %270 = load i64, i64* @efi_debug, align 8
  %271 = icmp ne i64 %270, 0
  br i1 %271, label %272, label %276

272:                                              ; preds = %269
  %273 = load i32, i32* @stderr, align 4
  %274 = load i32, i32* %5, align 4
  %275 = call i32 (i32, i8*, ...) @fprintf(i32 %273, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.6, i64 0, i64 0), i32 %274)
  br label %276

276:                                              ; preds = %272, %269
  %277 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %278 = call i32 @efi_free(%struct.dk_gpt* %277)
  %279 = load i32, i32* %5, align 4
  store i32 %279, i32* %2, align 4
  br label %283

280:                                              ; preds = %236
  %281 = load %struct.dk_gpt*, %struct.dk_gpt** %4, align 8
  %282 = call i32 @efi_free(%struct.dk_gpt* %281)
  store i32 0, i32* %2, align 4
  br label %283

283:                                              ; preds = %280, %276, %224, %210, %191, %155, %27
  %284 = load i32, i32* %2, align 4
  ret i32 %284
}

declare dso_local i32 @efi_alloc_and_read(i32, %struct.dk_gpt**) #1

declare dso_local i32 @efi_free(%struct.dk_gpt*) #1

declare dso_local i64 @P2ALIGN(i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @efi_write(i32, %struct.dk_gpt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
